export const snapshot = {};

snapshot[`isIntersectionOf<T> > returns properly named function 1`] = `
"isObjectOf({
  a: isNumber,
  b: isString
})"
`;

snapshot[`isPartialOf<T> > returns properly named function 1`] = `
"isObjectOf({
  a: isOptionalOf(isNumber),
  b: isOptionalOf(isString),
  c: isOptionalOf(isBoolean)
})"
`;

snapshot[`isPartialOf<T> > returns properly named function 2`] = `
"isObjectOf({
  a: isOptionalOf(isNumber),
  b: isOptionalOf(isString),
  c: isOptionalOf(isBoolean)
})"
`;

snapshot[`isUnionOf<T> > returns properly named function 1`] = `
"isUnionOf([
  isNumber,
  isString,
  isBoolean
])"
`;

snapshot[`isOmitOf<T, K> > returns properly named function 1`] = `
"isObjectOf({
  a: isNumber,
  c: isBoolean
})"
`;

snapshot[`isOmitOf<T, K> > returns properly named function 2`] = `"isObjectOf({a: isNumber})"`;

snapshot[`isPickOf<T, K> > returns properly named function 1`] = `
"isObjectOf({
  a: isNumber,
  c: isBoolean
})"
`;

snapshot[`isPickOf<T, K> > returns properly named function 2`] = `"isObjectOf({a: isNumber})"`;
